--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,12 +12,14 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Metrics 📊
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+      - name: Achievements 🏆
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.achievements.compact.svg
+          filename: achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_achievements: yes
@@ -26,3 +28,11 @@ jobs:
           #  scripter, packager, explorer, infographile, manager
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
+      - name: Star lists ⭐
+        uses: lowlighter/metrics@latest
+        with:
+          filename: starlists.svg
+          base: ""
+          plugin_starlists: yes
+          plugin_starlists_limit_repositories: 2
+          #plugin_starlists_only: TC39
