--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,27 +12,38 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Metrics 📊
+      - name: 📊 Metrics
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-      - name: Achievements 🏆
-      - uses: lowlighter/metrics@latest
+      - name: 🏆 Achievements
+        uses: lowlighter/metrics@latest
         with:
           filename: achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
           plugin_achievements: yes
           #plugin_achievements_only: >-
           #  polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
           #  scripter, packager, explorer, infographile, manager
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
-      - name: Star lists ⭐
+      - name: ⭐ Star lists
         uses: lowlighter/metrics@latest
         with:
           filename: starlists.svg
-          base: ""
           plugin_starlists: yes
-          plugin_starlists_limit_repositories: 2
+          plugin_starlists_languages: yes
+          plugin_starlists_limit: 5
+          plugin_starlists_limit_repositories: 0
+          plugin_starlists_limit_languages: 8
+          plugin_starlists_shuffle_repositories: yes
           #plugin_starlists_only: TC39
+      - name: 🈷️ Most used languages
+        uses: lowlighter/metrics@latest
+        with:
+          filename: languages.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_ignored: >-
+            tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+          plugin_languages_limit: 8
