--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,9 +3,9 @@ on:
   # Schedule daily updates
   schedule: [{cron: "0 0 * * *"}]
   # (optional) Run workflow manually
-  workflow_dispatch:
+  #workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  #push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -31,6 +31,7 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: starlists.svg
+          token: ${{ secrets.METRICS_TOKEN }}
           plugin_starlists: yes
           plugin_starlists_languages: yes
           plugin_starlists_limit: 5
