--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,35 +16,53 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          template: classic
+          base: header, activity, community, repositories, metadata
+          filename: github-metrics.svg
+          config_timezone: America/Los_Angeles
+          
       - name: 🏆 Achievements
         uses: lowlighter/metrics@latest
         with:
-          filename: achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: ''
+          base_skip: yes
+          filename: achievements.svg  
           plugin_achievements: yes
           #plugin_achievements_only: >-
           #  polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
           #  scripter, packager, explorer, infographile, manager
           plugin_achievements_display: compact
-          plugin_achievements_threshold: X
-      - name: ⭐ Star lists
-        uses: lowlighter/metrics@latest
-        with:
-          filename: starlists.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          plugin_starlists: yes
-          plugin_starlists_languages: yes
-          plugin_starlists_limit: 5
-          plugin_starlists_limit_repositories: 0
-          plugin_starlists_limit_languages: 8
-          plugin_starlists_shuffle_repositories: yes
-          #plugin_starlists_only: TC39
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          
+      #- name: ⭐ Star lists
+      #  uses: lowlighter/metrics@latest
+      #  with:
+      #    token: ${{ secrets.METRICS_TOKEN }}
+      #    base: ''
+      #    filename: starlists.svg      
+      #    plugin_starlists: yes
+      #    plugin_starlists_languages: yes
+      #    plugin_starlists_limit: 5
+      #    plugin_starlists_limit_repositories: 0
+      #    plugin_starlists_limit_languages: 8
+      #    plugin_starlists_shuffle_repositories: yes
+      #    #plugin_starlists_only: TC39
+
       - name: 🈷️ Most used languages
         uses: lowlighter/metrics@latest
         with:
-          filename: languages.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: ''
+          filename: languages.svg        
           plugin_languages: yes
           plugin_languages_ignored: >-
             tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_details: percentage
           plugin_languages_limit: 8
+          plugin_languages_other: yes
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
