--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -58,7 +58,7 @@ jobs:
           filename: languages.svg        
           plugin_languages: yes
           plugin_languages_ignored: >-
-            tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
+            apacheconf, tex, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_details: percentage
@@ -66,3 +66,13 @@ jobs:
           plugin_languages_other: yes
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          
+      - name: 📅 Commit calendar
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ''
+          filename: commit-calendar.svg       
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+
